--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@
 title                    : "Lorem "
 description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
 repository               : "RayeRen/acad-homepage.github.io"
+baseurl                  : "/acad-homepage.github.io"
+url                      : "https://nirvana051.github.io"
 google_scholar_stats_use_cdn : true
 
 
