--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: "/#about-me"
  
   - title: "CV"
-    url: "/acad-homepage.github.io/cv/"
+    url: "cv/"
   
   - title: "News"
     url: "/#-news"
