--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,28 +1,31 @@
 # main links links
 main:
-  - title: "About Me"
-    url: "/#about-me"
- 
+  - title: "Home"
+    url: "/acad-homepage.github.io/"       # Absolute link to the homepage
+
   - title: "CV"
-    url: "cv/"
-  
+    url: "/acad-homepage.github.io/cv/"    # Absolute link to the CV page
+
+  - title: "About Me"
+    url: "/acad-homepage.github.io/#about-me"
+
   - title: "News"
-    url: "/#-news"
+    url: "/acad-homepage.github.io/#-news"
 
   - title: "Publications"
-    url: "/#-publications"
+    url: "/acad-homepage.github.io/#-publications"
 
   - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+    url: "/acad-homepage.github.io/#-honors-and-awards"
 
   - title: "Educations"
-    url: "/#-educations"
+    url: "/acad-homepage.github.io/#-educations"
 
   - title: "Invited Talks"
-    url: "/#-invited-talks"
+    url: "/acad-homepage.github.io/#-invited-talks"
 
   - title: "Internships"
-    url: "/#-internships"
+    url: "/acad-homepage.github.io/#-internships"
 
 
 
