--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,31 +1,29 @@
 # main links links
 main:
-  - title: "Home"
-    url: "/acad-homepage.github.io/"       # Absolute link to the homepage
-
-  - title: "CV"
-    url: "/acad-homepage.github.io/cv/"    # Absolute link to the CV page
-
   - title: "About Me"
-    url: "/acad-homepage.github.io/#about-me"
-
+    url: "/#about-me"
+ 
+  - title: "CV"
+    url: "cv/"
+  
   - title: "News"
-    url: "/acad-homepage.github.io/#-news"
+    url: "/#-news"
 
   - title: "Publications"
-    url: "/acad-homepage.github.io/#-publications"
+    url: "/#-publications"
 
   - title: "Honors and Awards"
-    url: "/acad-homepage.github.io/#-honors-and-awards"
+    url: "/#-honors-and-awards"
 
   - title: "Educations"
-    url: "/acad-homepage.github.io/#-educations"
+    url: "/#-educations"
 
   - title: "Invited Talks"
-    url: "/acad-homepage.github.io/#-invited-talks"
+    url: "/#-invited-talks"
 
   - title: "Internships"
-    url: "/acad-homepage.github.io/#-internships"
+    url: "/#-internships"
+
 
 
 
